--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,8 @@
      font-weight: 700;
      text-align: left;
      color: #fff;
-     padding: 0px 38px;
+     padding-left: 38px;
+     padding-right: 38px;
  }
  .click-button{
      font-size: 16px;
